--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <html lang="pt-BR">
-<head>
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <title>DISNEYFLIX</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>DISNEYFLIX</header>
 
     <section>
-        <div class="chamada-texto">
-            <h1>PIORES e MELHORES Filmes da DISNEY - (Animações de 2000 a 2020)</h1>
-            <p>#filmesdisney</p>
-        </div>
+      <div class="chamada-texto">
+        <h1>PIORES e MELHORES Filmes da DISNEY - (Animações de 2000 a 2020)</h1>
+        <p>#filmesdisney</p>
+      </div>
 
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/RN-_H0t4GXU?si=FSVIs7AcTJYjsPTT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
+      <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/RN-_H0t4GXU?si=bufdbrMAgZGX2Zxh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
     </section>
-
-</body>
-
+  </body>
 </html>
